# TGBOT

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  container_ci.yml  dependabot_merge.yml  deploy.yml  update_deps.yml
libs/: bingai.py  chatgpt.py
tgbot/: main.py
tgbot/libs/: bingai.py  chatgpt.py  stickers.py
