[tool.poetry]
name = "tgbot"
version = "0.1.0"
description = "Telegram bot that integrates both ChatGPT and BingAI, combining two different artificial intelligence technologies to provide a more comprehensive and accurate response."
authors = ["Mohammed Rabil <rabil@techie.com>"]
license = "GNU AGPL V3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
asyncio = "^3.4.3"
edgegpt = {git = "https://github.com/acheong08/EdgeGPT.git"}
pyrogram = "^2.0.106"
revchatgpt = "^5.1.0"
tgcrypto = "^1.2.5"
uvloop = "^0.17.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

# Create run script to run main.py
[tool.poetry.scripts]
tgbot = "tgbot.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
